Added data validation.
